engine/tests/detection_corpus/bad/exec_python_exec.py
exec(compile(code_string, "<dynamic>", "exec"))
